# src/routes/food.route.ts
@@ -3,6 +3,7 @@ import * as controller from "../controllers/food.controller";
 import { validate } from "../middlewares/validation.middleware";
 import { createFoodSchema } from "../schemas/food.schema";
 import { verifyToken } from "../middlewares/authentication.middleware";
+import { requireRole } from "../middlewares/authorization.middleware";
 
 const router = Router();
 
@@ -10,7 +11,21 @@ router.get("/", verifyToken, controller.getAllFoods);
 router.post(
   "/",
   verifyToken,
+  requireRole(["ADMIN"]),
   validate(createFoodSchema),
+  controller.createFood,
+);
+router.put(
+  "/:id",
+  verifyToken,
+  requireRole(["ADMIN"]),
+  validate(createFoodSchema),
+  controller.updateFood,
+);
+router.delete(
+  "/:id",
+  verifyToken,
+  requireRole(["ADMIN"]),
   controller.createFood,
 );
 export default router;
